force-app/main/default/objects/Location_of_Focus__c/Location_of_Focus__c.object-meta.xml
<CustomObject>
    <label>Location of Focus</label>
    <nameField>
        <label>Location of Focus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location of Focuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>