force-app/main/default/objects/Location_of_Focus__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Location of Focuses</relationshipLabel>
    <relationshipName>Location_of_Focuses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>