force-app/main/default/objects/Location_of_Focus__c/fields/Giganet_Region__c.field-meta.xml
<CustomField>
    <fullName>Giganet_Region__c</fullName>
    <label>Giganet Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>Yorkshire</fullName>
            </value>
            <value>
                <fullName>Midlands</fullName>
            </value>
            <value>
                <fullName>East Anglia</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>Berks &amp; Bucks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>