force-app/main/default/objects/Location_of_Focus__c/fields/Route_to_Market__c.field-meta.xml
<CustomField>
    <fullName>Route_to_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route to Market</label>
    <referenceTo>Route_to_Market__c</referenceTo>
    <relationshipLabel>Location of Focuses</relationshipLabel>
    <relationshipName>Location_of_Focuses</relationshipName>
    <type>Lookup</type>
</CustomField>